<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">PrivateCloud</string>
    <string name="main_label_title">EditSettings</string>
    <string name="main_label_lastsync">Last sync on</string>
    <string name="main_label_lastsync_none">No sync performed</string>
    <string name="main_button_settings">Settings</string>
    <string name="main_button_folders">Folders</string>
    <string name="main_button_syncnow">Sync Now</string>
    <string name="main_button_conflict">Manage Conflicts</string>
    <string name="folders_label_title">Select folders to sync</string>
    <string name="folders_label_path">Path</string>
    <string name="folders_label_lastsync">Last sync</string>
    <string name="folders_label_active">Active</string>
    <string name="folders_button_add">Add</string>
    <string name="folders_button_edit">Edit</string>
    <string name="folders_button_delete">Delete</string>
    <string name="folders_button_save">Save</string>
    <string name="folders_button_cancel">cancel</string>
    <string name="settings_label_title">Settings</string>
    <string name="settings_label_hostname">Hostname</string>
    <string name="settings_label_port">Port</string>
    <string name="settings_label_username">Username</string>
    <string name="settings_label_remotedir">Remote Directory</string>
    <string name="settings_button_showpubkey">Show public key</string>
    <string name="settings_button_genkey">Generate new key</string>
    <string name="settings_button_save">Save</string>
    <string name="settings_button_add">Add Server</string>
    <string name="settings_button_cancel">cancel</string>
    <string name="settings_label_syncinterval">Sync interval (Min)</string>
    <string name="settings_chkbox_wifi">Sync only in Wifi</string>
    <string name="settings_chkbox_charge">Sync only while on Power</string>
    <string name="server_label_servername">Enter a name for the Connection</string>
    <string name="server_label_protocol">Protocol</string>
    <string name="server_radio_pw">Password authentication</string>
    <string name="server_radio_key">Privatekey authentication</string>
    <string name="server_label_password">Server Password</string>
    <string name="settings_button_delete">Delete</string>
    <string name="conflict_switch_local">Local</string>
    <string name="conflict_switch_remote">Remote</string>
    <string name="conflict_button_save">Save</string>
   	<string name="conflict_button_cancel">cancel</string>
    
    
    <string name="title_activity_folders">Folders</string>
    <string name="title_activity_server">Server settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="editfolders_no_folder">No folder selected</string>
    <string name="title_activity_activity_edit_folder">Folder</string>
    

    <string name="service_sync_start">Sync started</string>
    <string name="service_sync_running">Sync already running</string>
    
	<string name="progress_sync_start">Starting</string>
    <string name="progress_connection_local_start">Start sync local files...</string>
    <string name="progress_connection_remote_start">Start sync remote files...</string>
    <string name="progress_connection_error">connection to server could not be established, please check your configuration...</string>
    <string name="progress_error_no_server_linked_1">no remote server for local folder</string>
    <string name="progress_error_no_server_linked_2">has been removed</string>
   	<string name="progress_error_no_folders">no local folders selected to sync</string>
    
    	
	<string name="notification_title">Sync conflict</string>
	<string name="notification_text">There was a problem synchronizing files, please resolve</string>
	
  <string name="confirm_folder_added">Folder added successfully to sync list</string>
    <string name="perfs_hostname">hostname</string>
    <string name="perfs_port">port</string>
    <string name="perfs_username">username</string>
    <string name="perfs_remotedir">remotedir</string>
    <string name="perfs_password">password</string>
    <string name="perfs_keyorpw">keyorpw</string>
    <string name="perfname">connectionsettings</string>
    <string name="error">Error</string>
    <string name="error_server_first">Add your sync-server in settings first</string>
    <string name="error_folder_path">Select folder</string>
    <string name="server_key_sendmail">Send via Email</string>

    <string-array name="protocols">
        <item>SFTP (ssh)</item>
    </string-array>

    <string name="title_activity_conflict">ConflictActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>