<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:isScrollContainer="true"
    tools:context="ch.ffhs.privatecloudffhs.Settings" >
<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_label_servername" />

            <EditText
                android:id="@+id/Server_EditText_Servername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="text" />
        </FrameLayout>
        
		<TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/server_label_protocol" />
        <Spinner
            android:id="@+id/Server_Spinner_protocol"
            android:layout_width="match_parent"
            android:entries="@array/protocols"
            android:layout_height="wrap_content" />
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:id="@+id/TextView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_label_hostname" />

            <EditText
                android:id="@+id/Server_EditText_Hostname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="text" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_label_port" />

            <EditText
                android:id="@+id/Server_EditText_Port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="number" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_label_username" />

            <EditText
                android:id="@+id/Server_EditText_Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="text" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_label_remotedir" />

            <EditText
                android:id="@+id/Server_EditText__Remotedir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </FrameLayout>

        <RadioGroup 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <RadioButton android:id="@+id/server_radio_key"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/server_radio_key"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/server_radio_pw"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/server_radio_pw"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>
		
        <FrameLayout
            android:id="@+id/passwordlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="10dp" >

            <TextView
                android:id="@+id/TextViewPW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_label_password" />

            <EditText
                android:id="@+id/Server_EditText__Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPassword" />
        </FrameLayout>

        <Button
            android:id="@+id/server_Button_Showkey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="onButtonClicked"
            android:visibility="gone"
            android:text="@string/settings_button_showpubkey" />

        <Button
            android:id="@+id/server_Button_Genkey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="onButtonClicked"
            android:visibility="gone"
            android:text="@string/settings_button_genkey" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/Settings_Button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"           
                android:layout_weight="1"
                android:onClick="onButtonClicked"
                android:text="@string/settings_button_save" />

            <Button
                android:id="@+id/Settings_Button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"        
                android:layout_weight="1"
                android:onClick="onButtonClicked"
                android:text="@string/settings_button_cancel" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</FrameLayout>
