<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="ch.ffhs.privatecloudffhs.Settings" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent" >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_label_syncinterval" />

            <EditText
                android:id="@+id/Settings_Syncinterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="numberDecimal" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <CheckBox
                android:id="@+id/onlyWifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_chkbox_wifi" />
        
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <CheckBox
                android:id="@+id/onlyCharging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_chkbox_charge" />
        
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >
<ListView
            android:id="@+id/Servers_List"
            android:layout_width="match_parent"
        	android:layout_height="200dp">
        </ListView>
      </FrameLayout>

        

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessLeaf" >
<Button
            android:id="@+id/Settings_Button_Add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="onButtonClicked"
            android:text="@string/settings_button_add" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/Settings_Button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"           
                android:layout_weight="1"
                android:onClick="onButtonClicked"
                android:text="@string/settings_button_save" />

            <Button
                android:id="@+id/Settings_Button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"        
                android:layout_weight="1"
                android:onClick="onButtonClicked"
                android:text="@string/settings_button_cancel" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
